# langup_backend

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  pyproject.toml  start.sh
.github/workflows/: ci.yaml
app/: dependencies.py  main.py
app/celery/: config.py
app/celery/tasks/: ai_tasks.py  analytics_tasks.py  email_tasks.py  payment_tasks.py  srs_tasks.py
app/core/: logging.py
app/core/config/: __init__.py  ai.py  app.py  auth.py  base.py  celery.py  config.py  db.py  email.py  (+8 more)
app/database/: postgres.py  redis_pool.py
app/enums/: ai.py  auth.py  base.py  events.py  learning.py  payments.py  user.py  vocabulary.py
app/events/: bus.py  consumer.py  producer.py  topics.py
app/middlewares/: audit.py  logging.py  rate_limit.py  request_id.py  security_headers.py
app/models/: __init__.py  ai_generation.py  audit_log.py  auth.py  base.py  exercise.py  exercise_attempt.py  invoice.py  learning_path.py  learning_session.py  payment.py  plan.py  promo_code.py  review_schedule.py  source.py  subscription.py  usage_limit.py  user.py  user_word.py  webhook_event.py  word.py  word_context.py
app/repositories/: ai_generation.py  audit_log.py  auth.py  base.py  exercise.py  exercise_attempt.py  invoice.py  learning_path.py  learning_session.py  payment.py  plan.py  promo_code.py  redis_base.py  review_schedule.py  source.py  subscription.py  usage_limit.py  user.py  user_word.py  webhook_event.py  word.py  word_context.py
app/routers/: __init__.py  admin.py  ai.py  auth.py  capture.py  exercises.py  health_check.py  learning.py  payments.py  user.py  vocabulary.py  webhooks.py
app/schemas/: ai.py  auth.py  capture.py  exercise.py  learning.py  pagination.py  payments.py  user.py  vocabulary.py
app/services/: audit_service.py  capture_service.py  user.py
app/storage/: base.py  s3.py
app/utils/: crypto.py  datetime.py  idempotency.py  pagination.py  retry.py
app/websockets/: connection_manager.py
docs/: AI.md  ARCHITECTURE.md  DEVELOPMENT.md  PAYMENTS.md
frontend/: README.md  app.js  config.js  index.html  styles.css
k8s/: README.md
redis/: entrypoint.sh
tests/: README.md  conftest.py  test_auth.py  test_smoke.py  test_users.py  test_words.py
(+70 files in other folders)
